rendered/envs/demo/gitpod/ingressroute-vmauth-gitpod.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    a8r.io/repository: https://github.com/kbudde/k8s-demo
    external-dns.alpha.kubernetes.io/target: lb.demo.budd.ee
    kubernetes.io/ingress.class: traefik
  name: vmauth-gitpod
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`python.demo.budd.ee`)
      priority: 10
      services:
        - name: vmauth-gitpod
          port: 8427
          scheme: http
